ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
@import 'theming';

.adf {
    &-field-list {
        padding: 0;
        list-style-type: none;
        width: 100%;
        height: 100%;
    }

    .container-widget__header-text {
        border-bottom: 1px solid rgba(0, 0, 0, 0.87);
        margin-left: 10px;
        margin-right: 10px;
        cursor: default;
        user-select: none;
        -webkit-user-select: none;
        /* Chrome/Safari/Opera */
        -moz-user-select: none;
        /* Firefox */
        -ms-user-select: none;
        /* IE/Edge */
        -webkit-touch-callout: none;
        /* iOS Safari */
        &.collapsible {
            cursor: pointer;
        }
    }
}

container-widget{
    md-grid-list {
        height:100px;
    }

    md-input-container {
        width: 95%;
    }

    .mat-focused {
        label {
            transform: scaleX(1);
            transition: transform 150ms linear,
            background-color $swift-ease-in-duration $swift-ease-in-timing-function;
            color: mat-color($primary);
        }

        .mat-input-prefix {
            color: mat-color($primary);
        }
    }

    .mat-grid-tile {
        overflow: visible;
    }

}

